[package]
name = "basilisk-traits"
version = "1.0.0"
authors = ["GalacticCouncil"]
edition = "2018"
repository = "https://github.com/galacticcouncil/Basilisk-node"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }

[dependencies]
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "2.0.0" }
serde = { features = ["derive"], optional = true, version = "1.0.101" }

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "frame-support/std",
    "sp-std/std",
]
