[package]
name = "runtime-integration-tests"
version = "1.0.4"
description = "Integration tests"
authors = ["GalacticCouncil"]
edition = "2021"
homepage = "https://github.com/galacticcouncil/Basilisk-node"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/Basilisk-node"

[dependencies]
# HydraDX dependencies
pallet-transaction-multi-payment = { workspace = true }
pallet-nft = { workspace = true }
pallet-currencies = { workspace = true }
pallet-route-executor = { workspace = true }
pallet-asset-registry = { workspace = true }
pallet-ema-oracle = { workspace = true }
hydradx-traits = { workspace = true }
pallet-duster = { workspace = true }
pallet-xyk = { workspace = true }
pallet-lbp = { workspace = true }

pallet-marketplace = { workspace = true}

primitives = { default-features = false, path = "../primitives" }

pallet-treasury = { workspace = true }
pallet-scheduler = { workspace = true }

# collator support
pallet-collator-selection = { workspace = true }
pallet-authorship = { workspace = true }

# ORML dependencies
orml-tokens = { workspace = true }
orml-traits = { workspace = true }
orml-vesting = { workspace = true }
orml-xcm = { workspace = true }

# orml XCM support
orml-xtokens = { workspace = true }
orml-xcm-support = { workspace = true }
orml-unknown-tokens = { workspace = true }

# Cumulus dependencies
cumulus-pallet-aura-ext = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-pallet-dmp-queue = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-utility = { workspace = true }
cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-primitives-timestamp = { workspace = true }
staging-parachain-info = { workspace = true }

# Polkadot dependencies
polkadot-parachain = { workspace = true }
polkadot-service = { workspace = true, features = ["full-node"] }
xcm-builder = { workspace = true }
pallet-xcm = { workspace = true }
xcm-executor = { workspace = true }
polkadot-xcm = { workspace = true }

# Substrate dependencies
frame-benchmarking = { workspace = true, optional = true }
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-aura = { workspace = true }
pallet-balances = { workspace = true }
pallet-collective = { workspace = true }
pallet-session = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-utility = { workspace = true }
pallet-uniques = { workspace = true }
pallet-im-online = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-consensus-beefy = { workspace = true }
sp-consensus-slots = { workspace = true }
sp-authority-discovery = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-externalities = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
sp-staking = { workspace = true }
sp-trie = { workspace = true }
sp-io = { workspace = true }
sc-consensus-grandpa = { workspace = true }

polkadot-primitives = { workspace = true }
polkadot-runtime-parachains = { workspace = true }

basilisk-runtime = { path = "../runtime/basilisk", default-features = false}
rococo-runtime = {workspace = true}
cumulus-test-relay-sproof-builder = { workspace = true }

[dev-dependencies]
xcm-emulator = { workspace = true }
hex-literal = { workspace = true }
pallet-relaychain-info = { workspace = true }
pretty_assertions = { workspace = true }
sp-arithmetic = { workspace = true }
test-case = { workspace = true }

[features]
default = ["std"]
std = [
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-currencies/std",
    "orml-tokens/std",
    "orml-traits/std",
    "orml-vesting/std",
    "orml-xtokens/std",
    "orml-xcm-support/std",
    "orml-unknown-tokens/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-pallet-aura-ext/std",
    "cumulus-pallet-xcm/std",
    "cumulus-pallet-xcmp-queue/std",
    "cumulus-primitives-core/std",
    "cumulus-primitives-parachain-inherent/std",
    "polkadot-xcm/std",
    "xcm-builder/std",
    "xcm-executor/std",
    "pallet-xcm/std",
    "staging-parachain-info/std",
    "pallet-xyk/std",
    "pallet-duster/std",
    "pallet-asset-registry/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-nft/std",
    "pallet-marketplace/std",
    "pallet-session/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-multi-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-lbp/std",
    "pallet-utility/std",
    "pallet-im-online/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-consensus-babe/std",
    "sp-consensus-beefy/std",
    "sp-authority-discovery/std",
    "sp-core/std",
    "sp-io/std",
    "sp-inherents/std",
    "sp-externalities/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-trie/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "pallet-treasury/std",
    "pallet-collective/std",
    "pallet-scheduler/std",
    "pallet-collator-selection/std",
    "pallet-authorship/std",
    "basilisk-runtime/std",
    "hydradx-traits/std",
    "rococo-runtime/std",
]

runtime-benchmarks = [
    "basilisk-runtime/runtime-benchmarks",
    "rococo-runtime/runtime-benchmarks",
]