[package]
authors = ['GalacticCouncil']
edition = '2021'
homepage = 'https://github.com/galacticcouncil/hydradx-math'
license = 'Apache-2.0'
name = "basilisk-math"
description = "A collection of utilities to make performing liquidity pool calculations more convenient."
repository = 'https://github.com/galacticcouncil/hydradx-math'
version = "8.3.0"

[dependencies]
primitive-types = {  workspace = true }
# Added because of use of the FixedU128, used to implement `Ratio`
codec = {  workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = {  workspace = true }
sp-arithmetic = { workspace = true }
sp-std = { workspace = true }
serde = {  workspace = true }
num-traits = {  workspace = true }
rand = { workspace = true, features = ["std_rng"] }

hydra-dx-math = { workspace = true }

[dev-dependencies]
proptest = {  workspace = true }
rug = {  workspace = true }
test-case = {  workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",
    "sp-arithmetic/std",
    "sp-std/std"
]
runtime-benchmarks = []
