[package]
name = "primitives"
version = "6.6.1"
authors = ["GalacticCouncil"]
edition = "2021"
repository = "https://github.com/galacticcouncil/Basilisk-node"

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[dependencies]
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "3.4.0" }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
primitive-types = { workspace = true }
serde = { features = ["derive"], optional = true, version = "1.0.136" }
static_assertions = "1.1.0"

# Polkadot dependencies
polkadot-primitives = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "primitive-types/std",
    "serde",
    "frame-support/std",
    "sp-std/std",
    "sp-runtime/std",
    "scale-info/std",
    "polkadot-primitives/std",
]
