[package]
name = "primitives"
version = "6.6.5"
authors = ["GalacticCouncil"]
edition = "2021"
repository = "https://github.com/galacticcouncil/Basilisk-node"

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
primitive-types = { workspace = true }
serde = { workspace = true, optional = true }
static_assertions = { workspace = true }

# Polkadot dependencies
polkadot-primitives = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "primitive-types/std",
    "serde",
    "frame-support/std",
    "sp-std/std",
    "sp-runtime/std",
    "scale-info/std",
    "polkadot-primitives/std",
]
